samples/_failures_safe/1761045046_f2caf8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36b2791f.c: In function ‘transform_point’:
./samples/SAFE/__tmp_36b2791f.c:127:12: error: expected declaration or statement at end of input
  127 |     struct Vector3D rotated = matrix_vector_multiply(t.rotation, scaled);
      |            ^~~~~~~~
